--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@heroui/divider": "^2.2.9",
     "@iconify/react": "4.1.1",
     "@radix-ui/react-separator": "^1.1.2",
+    "@supabase/supabase-js": "^2.49.4",
     "@tabler/icons-react": "3.5.0",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
