--- a/package.json
+++ b/package.json
@@ -33,7 +33,15 @@
     "sharp": "0.32.6",
     "simplebar-react": "3.2.5",
     "tailwind-merge": "^3.0.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "@radix-ui/react-checkbox": "^1.1.1",
+    "@radix-ui/react-dropdown-menu": "^2.1.1",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@supabase/ssr": "latest",
+    "autoprefixer": "10.4.20",
+    "next-themes": "^0.4.3",
+    "prettier": "^3.3.3"
   },
   "devDependencies": {
     "@types/node": "20",
