--- a/package.json
+++ b/package.json
@@ -41,7 +41,9 @@
     "@supabase/ssr": "latest",
     "autoprefixer": "10.4.20",
     "next-themes": "^0.4.3",
-    "prettier": "^3.3.3"
+    "prettier": "^3.3.3",
+    "simplebar": "^6.3.0"
+
   },
   "devDependencies": {
     "@types/node": "20",
