--- a/package.json
+++ b/package.json
@@ -11,9 +11,15 @@
   "dependencies": {
     "@heroui/divider": "^2.2.9",
     "@iconify/react": "4.1.1",
+    "@radix-ui/react-checkbox": "^1.1.1",
+    "@radix-ui/react-dropdown-menu": "^2.1.1",
+    "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-separator": "^1.1.2",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.49.4",
     "@tabler/icons-react": "3.5.0",
+    "autoprefixer": "10.4.20",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
@@ -25,25 +31,18 @@
     "moment": "2.29.4",
     "mysql2": "^3.13.0",
     "next": "14.2.4",
+    "next-themes": "^0.4.3",
     "pg": "^8.14.1",
+    "prettier": "^3.3.3",
     "react": "18",
     "react-apexcharts": "1.4.1",
     "react-dom": "18",
     "react-icons": "^5.5.0",
     "sharp": "0.32.6",
+    "simplebar": "^6.3.0",
     "simplebar-react": "3.2.5",
     "tailwind-merge": "^3.0.1",
-    "tailwindcss-animate": "^1.0.7",
-    "@radix-ui/react-checkbox": "^1.1.1",
-    "@radix-ui/react-dropdown-menu": "^2.1.1",
-    "@radix-ui/react-label": "^2.1.0",
-    "@radix-ui/react-slot": "^1.1.0",
-    "@supabase/ssr": "latest",
-    "autoprefixer": "10.4.20",
-    "next-themes": "^0.4.3",
-    "prettier": "^3.3.3",
-    "simplebar": "^6.3.0"
-
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "20",
