--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "prettier": "^3.3.3",
     "react": "18",
     "react-apexcharts": "1.4.1",
+    "react-datepicker": "^8.3.0",
     "react-dom": "18",
     "react-icons": "^5.5.0",
     "sharp": "0.32.6",
