--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "clsx": "^2.1.1",
     "flowbite": "2.3.0",
     "flowbite-react": "0.10.1",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "lodash": "4.17.21",
     "lucide-react": "^0.475.0",
     "moment": "2.29.4",
