--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.0",
     "@supabase/ssr": "^0.6.1",
-    "@supabase/supabase-js": "^2.49.4",
+    "@supabase/supabase-js": "^2.57.4",
     "@tabler/icons-react": "3.5.0",
     "autoprefixer": "10.4.20",
     "bcrypt": "^5.1.1",
@@ -26,6 +26,7 @@
     "clsx": "^2.1.1",
     "flowbite": "2.3.0",
     "flowbite-react": "0.10.1",
+    "jsonwebtoken": "^9.0.2",
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
     "lodash": "4.17.21",
@@ -34,6 +35,7 @@
     "mysql2": "^3.13.0",
     "next": "14.2.4",
     "next-themes": "^0.4.3",
+    "papaparse": "^5.5.3",
     "pg": "^8.14.1",
     "prettier": "^3.3.3",
     "react": "18",
@@ -49,6 +51,7 @@
   },
   "devDependencies": {
     "@types/node": "20",
+    "@types/papaparse": "^5.3.16",
     "@types/react": "18",
     "@types/react-dom": "18",
     "@types/react-is": "18.3.0",
