--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "mysql2": "^3.13.0",
     "next": "14.2.4",
     "next-themes": "^0.4.3",
+    "nodemailer": "^7.0.9",
     "papaparse": "^5.5.3",
     "pg": "^8.14.1",
     "prettier": "^3.3.3",
